infra/k8s_dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: campus-activity.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/activities/?(.*)
            pathType: Prefix
            backend:
              service:
                name: activities-srv
                port:
                  number: 3000   
          - path: /api/regs/?(.*)
            pathType: Prefix
            backend:
              service:
                name: regs-srv
                port:
                  number: 3000   
          - path: /student/?(.*)
            pathType: Prefix
            backend:
              service:
                name: student-srv
                port:
                  number: 3000    
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
